--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -7,7 +7,7 @@
 * {{l|en|moufflon}}
 
 ===Etymology===
-Borrowed from {{bor|en|fr|mouflon}}, from {{cog|it|muflone}}.  From 1765-75.
+Borrowed from {{bor|en|fr|mouflon}}, from {{cog|it|muflone}}.  From 1765–1775.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/ˈmuːf.lɒn/|lang=en}}
@@ -22,9 +22,9 @@ Borrowed from {{bor|en|fr|mouflon}}, from {{cog|it|muflone}}.  From 1765-75.
 {{trans-top|sheep}}
 * Albanian: {{t|sq|mufloni}}
 * Basque: {{t|eu|mufloi}}
-* Belarusian: {{t|be|муфлон|sc=Cyrl}}
+* Belarusian: {{t|be|муфло́н}}
 * Breton: {{t|br|mouflon}}
-* Bulgarian: {{t|bg|муфлон|sc=Cyrl|tr=muflon}}
+* Bulgarian: {{t|bg|муфло́н}}
 * Catalan: {{t|ca|mufló}}
 * Corsican: {{t|co|muvrinu}}
 * Czech: {{t+|cs|muflon}}
@@ -41,14 +41,14 @@ Borrowed from {{bor|en|fr|mouflon}}, from {{cog|it|muflone}}.  From 1765-75.
 * Hungarian: {{t+|hu|muflon}}
 * Irish: {{t|ga|caora mouflon|f}}
 * Italian: {{t+|it|muflone|m}}
-* Japanese: {{t+|ja|ムフロン|sc=Jpan|tr=mufuron}}
+* Japanese: {{t+|ja|ムフロン|tr=mufuron}}
 * Ladin: {{t|lld|muflon}}
 * Latin: {{t|la|mūsimō|m}}
 * Latvian: {{t|lv|muflons}}
 * Lithuanian: {{t+|lt|muflonas}}
 {{trans-mid}}
 * Lower Sorbian: {{t|dsb|muflon}}
-* Macedonian: {{t|mk|муфлон|sc=Cyrl}}
+* Macedonian: {{t|mk|муфлон}}
 * Maltese: {{t|mt|muflun}}
 * Navajo: {{t|nv|tó wónaanídę́ę́ʼ dibé ałchiní}}
 * Norwegian: {{t|no|mufflon}}
@@ -59,7 +59,7 @@ Borrowed from {{bor|en|fr|mouflon}}, from {{cog|it|muflone}}.  From 1765-75.
 * Romanian: {{t+|ro|muflon|m}}
 * Romansch: {{t|rm|muflon}}
 * Russian: {{t+|ru|муфло́н}}
-* Sami: [[muflon]], [[meahccesávza]]
+* Sami: {{t|se|muflon}}, {{t|se|meahccesávza}}
 * Sardinian: {{t|sc|mruvoni}}, {{t|sc|mugra}}, {{t|sc|muva}}, {{t|sc|murgone}}
 * Serbo-Croatian:
 *: Cyrillic spelling: {{t|sh|муфлон|sc=Cyrl}}
@@ -69,7 +69,7 @@ Borrowed from {{bor|en|fr|mouflon}}, from {{cog|it|muflone}}.  From 1765-75.
 * Spanish: {{t|es|muflón|m}}
 * Swedish: {{t|sv|mufflon}}
 * Turkish: {{t+|tr|yaban koyunu}}, {{t+|tr|muflon}}
-* Ukrainian: {{t|uk|муфлон|sc=Cyrl|tr=muflon}}
+* Ukrainian: {{t|uk|муфлон}}
 * Upper Sorbian: {{t|hsb|muflon}}
 * Welsh: {{t|cy|mwfflon}}
 * West Frisian: {{t|fy|moeflon}}
