--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -1,6 +1,7 @@
 {{also|Crook}}
 ==English==
 
+===Pronunciation===
 * {{IPA|/kɹʊk/|lang=en}}
 * {{a|obsolete}} {{IPA|/kɹuːk/|lang=en}}<ref>{{cite-book|author=John Walker|title=A critical pronouncing dictionary|url=https://books.google.co.nz/books?id=9OsIAAAAQAAJ|archiveurl=|archivedate=|year=1824|page=149}}</ref>
 * {{audio|en-us-crook.ogg|Audio (US)|lang=en}}
