--- a/en/o/on first-name terms.742239.wikitext
+++ b/en/o/on first-name terms.742239.wikitext
@@ -5,7 +5,7 @@
 
 # [[familiar]] with someone, such that one can address that person by his or her first name.
 # {{lb|en|by extension|humorous}} in regular [[contact]] with a person or [[organisation]].
-#: My accountant was so bad I am now ''on first name terms'' with the tax department.
+#: My accountant was so bad I am now ''on first-name terms'' with the tax department.
 
 ====Usage notes====
-* Often followed by the preposition "with," as in "He's '''on first name terms''' with the president."
+* Often followed by the preposition "with," as in "He's '''on first-name terms''' with the president."
