--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -94,7 +94,7 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 * Belarusian: {{t|be|спада́р|m}}, {{t|be|пан|m}}
 * Bengali: {{t|bn|জনাব|sc=Beng}}
 * Bulgarian: {{t+|bg|господи́н|m}}
-* Burmese: {{t+|my|ဦး|sc=Mymr}}
+* Burmese: {{t+|my|ဦး|sc=Mymr}}, {{t+|my|ခင်ဗျာ}} {{qualifier|used by males to address both males and females}}, {{t+|my|ရှင်}} {{qualifier|used by females to address both males and females}}
 * Chinese:
 *: Mandarin: {{t+|cmn|先生|tr=xiānsheng|sc=Hani}}
 *: Min Nan: {{t+|nan|先生|tr=sian-siⁿ, sin-seⁿ, sian-seⁿ|sc=Hani}}
@@ -119,10 +119,10 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 * Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}, {{t|ja|だんな様|tr=だんなさま, danna-sama|sc=Jpan}}
 * Kazakh: {{t+|kk|мырза|sc=Cyrl}}
 * Khmer: {{t|km|ភោ|tr=pʰou|sc=Khmr}}
+{{trans-mid}}
 * Korean: {{t+|ko|선생님}}, {{t+|ko|씨|alt=-씨}}, {{t+|ko|아저씨}}
 * Kurdish:
 *: Sorani: {{t+|ku|کاک}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|господин|sc=Cyrl}}, {{t|ky|мырза|sc=Cyrl}}
 * Lao: {{t|lo|ທ່ານ}}, {{t|lo|ທ່ານເອີຽ}}
 * Latin: {{t+|la|dominus|m}}, [[domine]] {{g|m}} (''[[vocative case|vocative]]'')
