--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -215,19 +215,15 @@ From {{m|hu|benn}}, following the example of {{m|hu|alant}} and {{m|hu|lent}}.<r
 
 ===Pronunciation===
 * {{hu-IPA}}
-* {{audio|Hu-bent.ogg|Audio|lang=hu}}
-* {{hyphenation|bent|lang=hu}}
+* {{audio|hu|Hu-bent.ogg|Audio}}
+* {{hyphenation|hu|bent}}
 
 ===Adverb===
-{{head|hu|adverb}}
+{{head|hu|adverb|comparative|bentebb|superlative|legbentebb}}
 
 # [[inside]]
-
-====Synonyms====
-* {{l|hu|benn}}
-
-====Antonyms====
-* {{l|hu|kinn}}, {{l|hu|kint}}
+#: {{syn|hu|benn}}
+#: {{ant|hu|kinn|kint}}
 
 ===References===
 <references/>
