--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -105,6 +105,8 @@ From {{inh|zh|sit-pro|*s-ŋʷ(j)a-t||moon; star}}, whence also {{w|Magar}} {{m|u
 * {{zh-l|十二月|shíèryuè|December}}
 {{rel-bottom}}
 
+{{hak-time-words}}
+
 ===Etymology 2===
 {{zh-see|肉|v}}
 
