--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -10,33 +10,17 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 * {{audio|en-us-consume.ogg|Audio (US)|lang=en}}
 * {{audio|en-uk-consume.ogg|Audio (UK)|lang=en}}
 
-===Verb. ===
-{{en-verb|consum}}.
+===Verb===
+{{en-verb|consum}}
 
 # {{lb|en|transitive}} To [[use up]].
-#:''The power plant '''consumes''' 30 tons of coal per hour.''
-#:
-#:The electrical factory consumes high amounts of energy in order to work.
+#: ''The power plant '''consumes''' 30 tons of coal per hour.''
 # {{lb|en|transitive}} To [[eat]].
-#<br />
-#:''Baby birds '''consume''' their own weight in food each day.''
-#:
-#:The diery of the average lion is consisted of dinners that involve the consumption of meat.
+#: ''Baby birds '''consume''' their own weight in food each day.''
 # {{lb|en|transitive}} To completely [[occupy]] the thoughts or attention of.
-#:''Desire '''consumed''' him.''
-#:
-#:He was consumed by his thoughts.
-#:
-#:He was consumed by greed.
-#:
-#:He was consumed by hate.
-#:
-#:He was consumed by desire.
-#:
-#:He was consumed by his feelings.
-#{{lb|en|transitive}} To [[destroy]] completely.
-#<br />
-#:''The building was '''consumed''' by fire.''
+#: ''Desire '''consumed''' him.''
+# {{lb|en|transitive}} To [[destroy]] completely.
+#: ''The building was '''consumed''' by fire.''
 #* Shakespeare
 #*: If he were putting to my house the brand / That shall '''consume''' it.
 #* Bible, Matthew vi. 20
@@ -47,33 +31,23 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 #* '''1899''', Kate Chopin, ''The Awakening'':
 #*: He assured her the child was '''consuming''' at that moment in the next room.
 # {{lb|en|economics|transitive|intransitive}} To [[trade]] [[money]] for [[good]] or [[service]]s as an [[individual]].
-#To buy or purchase products. 
-#:''In a materialistic society, individuals are taught to '''consume''', '''consume''', '''consume'''.''
-#:
-#:Because people consume a vast number of things, the phenomenon of consumerism grew.
-#:
-#:''If you '''consume''' this product while in Japan, you may be subject to consumption tax.''
-#{{lb|en|transitive}} To [[absorb]] [[information]], especially through the [[mass media]].
-#<br />
-#:''The Internet has changed the way we '''consume''' news.'' 
-#:
-#:The Internet has been the provider of news and information that its users consume.
+#: ''In a materialistic society, individuals are taught to '''consume''', '''consume''', '''consume'''.''
+#: ''If you '''consume''' this product while in Japan, you may be subject to consumption tax.''
+# {{lb|en|transitive}} To [[absorb]] [[information]], especially through the [[mass media]].
+#: ''The Internet has changed the way we '''consume''' news.''
 
 ====Synonyms====
-* {{sense|use}} {{l|en|burn}} (''of energy''), [[use]], [[use up]]. 
-*Example : He used a significant amount of energy, so he was consumed by the trying.
-*{{sense|eat}} {{l|en|devour}}, {{l|en|eat}}, {{l|en|swallow}}. 
-*Example: He not only ate his dinner, he also ate the leftovers. He consumed his meal.
-*
-* {{sense|occupy}} {{l|en|occupy}}, {{l|en|overcome}}, {{l|en|take over}}. 
-*{{sense|destroy}} {{l|en|annihilate}}, {{l|en|destroy}}, {{l|en|devastate}}, {{l|en|eliminate}}, {{l|en|obliterate}}, {{l|en|raze}} (''of a building''), [[wipe out]]. 
+* {{sense|use}} {{l|en|burn}} (''of energy''), [[use]], [[use up]]
+* {{sense|eat}} {{l|en|devour}}, {{l|en|eat}}, {{l|en|swallow}}
+* {{sense|occupy}} {{l|en|occupy}}, {{l|en|overcome}}, {{l|en|take over}}
+* {{sense|destroy}} {{l|en|annihilate}}, {{l|en|destroy}}, {{l|en|devastate}}, {{l|en|eliminate}}, {{l|en|obliterate}}, {{l|en|raze}} (''of a building''), [[wipe out]]
 
 ====Derived terms====
-* {{l|en|consumer}}. 
+* {{l|en|consumer}}
 
 ====Related terms====
-* {{l|en|consumption}}￼.
-* {{l|en|consumptive}}￼.
+* {{l|en|consumption}}
+* {{l|en|consumptive}}
 
 ====Translations====
 {{trans-top|use up}}
