--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -95,7 +95,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 *: Roman: {{t+|sh|dȉo|m}}, {{t+|sh|òdsječak|m}}
 * Spanish: {{t+|es|fracción}}, {{g|f}}
 * Swedish: {{t+|sv|bråkdel|c}}
-* Tagalog: {{t|tl|bahagimbilang}}
+* Tagalog: {{t|tl|hatimbilang}}
 * Ukrainian: {{t+|uk|части́на|f}}
 {{trans-bottom}}
 
