--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -627,19 +627,19 @@ Cognate with {{cog|ja|月|tr=tsuki}}.
 # a [[month]]
 
 ====Derived terms====
-{{der-top3}}
-* {{m|ryu|月影|tr=chichikaji}}
-* {{m|ryu|月ぬ物|tr=chichi nu mun}}
-* {{m|ryu|月夜|tr=chichū}}
-* {{m|ryu|月日|tr=chichifi}}
-* {{m|ryu|月見|tr=chichimi}}
-* {{m|ryu|一月|tr=chuchichi}}
-* {{m|ryu|朧月|tr=uburujichi}}
-* {{m|ryu|霜月|tr=shimuchichi}}
-* {{m|ryu|三日月|tr=mikajichi}}
-* {{m|ryu|毎月|tr=mējichi}}
-* {{m|ryu|閏月|tr=yunjichi}}
-{{der-bottom}}
+{{der4|ryu
+|{{l|ryu|月影|tr=chichikaji}}
+|{{l|ryu|月ぬ物|tr=chichi nu mun}}
+|{{l|ryu|月夜|tr=chichū}}
+|{{l|ryu|月日|tr=chichifi}}
+|{{l|ryu|月見|tr=chichimi}}
+|{{l|ryu|一月|tr=chuchichi}}
+|{{l|ryu|朧月|tr=uburujichi}}
+|{{l|ryu|霜月|tr=shimuchichi}}
+|{{l|ryu|三日月|tr=mikajichi}}
+|{{l|ryu|毎月|tr=mējichi}}
+|{{l|ryu|閏月|tr=yunjichi}}
+}}
 
 ===References===
 <references/>
