--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -593,20 +593,20 @@ From {{inh|mvi|jpx-ryu-pro|sort=ついきい|*tuki}}.
 }}
 
 ====Compounds====
-{{der-top4|Compounds}}
-* {{m|ryu|月食|tr=gwatsuku}}
-* {{m|ryu|一月|tr=ichigwachi}}
-* {{m|ryu|二月|tr=nigwachi}}
-* {{m|ryu|三月|tr=sangwachi}}
-* {{m|ryu|四月|tr=shigwachi}}
-* {{m|ryu|五月|tr=gugwachi}}
-* {{m|ryu|六月|tr=rukugwachi}}
-* {{m|ryu|七月|tr=shichigwachi}}
-* {{m|ryu|八月|tr=hachigwachi}}
-* {{m|ryu|九月|tr=kugwachi}}
-* {{m|ryu|十月|tr=zūgwachi}}
-* {{m|ryu|正月|tr=sōgwachi}}
-{{der-bottom}}
+{{der4|ryu
+|{{l|ryu|月食|tr=gwatsuku}}
+|{{l|ryu|一月|tr=ichigwachi}}
+|{{l|ryu|二月|tr=nigwachi}}
+|{{l|ryu|三月|tr=sangwachi}}
+|{{l|ryu|四月|tr=shigwachi}}
+|{{l|ryu|五月|tr=gugwachi}}
+|{{l|ryu|六月|tr=rukugwachi}}
+|{{l|ryu|七月|tr=shichigwachi}}
+|{{l|ryu|八月|tr=hachigwachi}}
+|{{l|ryu|九月|tr=kugwachi}}
+|{{l|ryu|十月|tr=zūgwachi}}
+|{{l|ryu|正月|tr=sōgwachi}}
+}}
 
 ===Alternative forms===
 * {{q|topicalized}} {{alter|ryu|月ぇ|tr=chichē}}
