--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -133,8 +133,8 @@ From {{inh|zh|sit-pro|*s-ŋʷ(j)a-t||moon; star}}, whence also {{w|Magar}} {{m|u
 }}
 
 ====Compounds====
-{{der-top3|Compounds}}
-{{ja-r/multi|data=
+{{der4|ja
+|{{ja-r/multi|data=
 * {{ja-r/args|月%行事|がち%ぎょうじ|rom=-}}, {{ja-r/args|月%行司|がち%ぎょうじ}}
 * {{ja-r/args|月輪|がちりん}}, {{ja-r/args|月輪|がつりん}}
 * {{ja-r/args|月代|さかやり}}
@@ -144,7 +144,7 @@ From {{inh|zh|sit-pro|*s-ŋʷ(j)a-t||moon; star}}, whence also {{w|Magar}} {{m|u
 * {{ja-r/args|海底%摸月|ハイテイ%-ラオユエ}}
 * {{ja-r/args|半月|はにわり}}
 }}
-{{der-bottom}}
+}}
 
 ===Etymology 1===
 {{ja-kanjitab|つき|yomi=k}}
