--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -829,6 +829,25 @@ From {{der|ppl|azc-nah-pro|*aatl}}, from {{der|ppl|azc-pro|*pa|*pa-ta}}.
 
 ----
 
+==Pochutec==
+
+===Etymology===
+From {{der|xpo|azc-nah-pro|*aatl}}, from {{der|xpo|azc-pro|*pa|*pa-ta}}.
+
+===Pronunciation===
+* {{IPA|xpo|/ˈat/}}
+
+===Noun===
+{{head|xpo|noun}}
+
+# {{l|en|water}}
+
+===References===
+* {{R:Boas 1917}}
+* {{R:Knab 1980}}
+
+----
+
 ==Scots==
 
 ===Preposition===
