/* English */ refs <lead time#54523418>

--- a/en/l/lead time.775552.wikitext
+++ b/en/l/lead time.775552.wikitext
@@ -20,5 +20,8 @@
 ===See also===
 * {{l|en|critical path}}
 
+===References===
+* {{R:Lexico}}
+
 ===Anagrams===
 * {{anagrams|en|a=adeeilmt|deli meat|meal-tide|mealtide}}
