--- a/en/l/lead time.775552.wikitext
+++ b/en/l/lead time.775552.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 {{en-noun}}
 # {{lb|en|idiomatic}} The amount of time between the [[initiation]] of some [[process]] and its [[completion]], e.g. the time required to [[manufacture]] or [[procure]] a product; the time required before something can be [[provided]] or [[delivered]].
-#: ''It's an excellent device, but it has a 10-week '''lead time''', so be sure to order it in advance.''
+#: {{ux|en|It's an excellent device, but it has a 10-week '''lead time''', so be sure to order it in advance.}}
 
 ====Translations====
 {{trans-top|the amount of time between the initiation of some process and its completion}}
