--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -227,9 +227,9 @@ From {{bor|ja|en|CD|sort=しいでぃい}}.
 {{ja-noun|シーディー}}
 
 # {{abbreviation of|ja|sort=しいでぃい|コンパクトディスク|tr=konpakuto disuku||{{l|en|compact disc}}|dot=;}} a {{l|en|CD}}
-#: {{ja-usex|それはヘビメタの'''CD'''です。|それ は ヘビメタ の '''シーディー''' です。|That is a heavy metal '''CD'''.}}
+#: {{ja-usex|それは[[ヘビメタ]]の'''Ｃ%Ｄ'''です。|それ は ヘビメタ の '''シー%ディー''' です。|That is a heavy metal '''CD'''.}}
 # {{abbreviation of|ja|キャッシュディスペンサー|tr=kyasshu disupensā||{{l|en|cash dispenser}}|sort=しいでぃい|dot=;}} an {{l|en|ATM}}, {{l|en|cash machine}}
-#: {{ja-usex|コンビニの'''CD'''からお金を引き出しました。|コンビニ の '''シーディー''' から おかね を ひきだしました。|I withdrew money from a '''CD''' at a convenience store.}}
+#: {{ja-usex|[[コンビニ]]の'''Ｃ%Ｄ'''からお金を引き出しました。|コンビニ の '''シー%ディー''' から おかね を ひきだしました。|I withdrew money from an '''ATM''' at a convenience store.}}
 
 ===See also===
 * {{ja-l|CD-ROM|tr=shīdī-romu}}
