--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -78,6 +78,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * German: {{t+|de|beugen}}
 * Greek: {{t+|el|λυγίζω}}
 *: Ancient: {{t|grc|κάμπτω}}
+*: Ionic: {{t|grc|καμπύλλω}}
 * Hebrew: {{t|he|כופף|tr=koféf}}
 * Hungarian: {{t+|hu|hajlít}}, {{t+|hu|görbít}}
 * Icelandic: {{t+|is|beygja}}
@@ -125,6 +126,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * German: {{t+|de|biegen}}, {{t+|de|biegen}}, {{t|de|durchbiegen}}
 * Greek:
 *: Ancient: {{t|grc|κάμπτω}}
+*: Ionic: {{t|grc|καμπύλλω}}
 * Hebrew: {{t|he|התכופף|tr=hitkoféf}}
 * Ido: {{t+|io|kurveskar}}
 * Japanese: {{t+|ja|曲がる|tr=magaru}}
