--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -76,6 +76,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * German: {{t+|de|dann}}, {{t+|de|damals}}
 * Greek: {{t+|el|τότε}}
 *: Ancient: {{t|grc|τότε}}, {{t|grc|ἄρα}}
+*: Doric: {{t|grc|τόκα}}
 * Hebrew: {{t+|he|אָז|tr=az}}
 * Hindi: {{t+|hi|तब}}
 * Hungarian: {{t+|hu|akkor}}
