t+qu:[[huywiy]] ([[WT:EDIT|Assisted]]) <whistle#54687962>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -308,6 +308,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Pitjantjatjara: {{t|pjt|utinmananyi}}
 * Polish: {{t+|pl|gwizdać|impf}}, {{t|pl|świstać|impf}}
 * Portuguese: {{t+|pt|assobiar}} {{qualifier|with one’s mouth}}, {{t+|pt|assoviar}} {{qualifier|with one’s mouth}}, {{t+|pt|apitar}} {{qualifier|with a whistle}}
+* Quechua: {{t|qu|huywiy}}
 * Romanian: {{t+|ro|fluiera}}, {{t+|ro|șuiera}}
 * Romansch: {{t|rm|tschivlar}}, {{t|rm|schular}}, {{t|rm|tgular}}, {{t|rm|schivlar}}, {{t|rm|tschüvler}}, {{t|rm|tschüblar}}
 * Russian: {{t+|ru|свисте́ть|impf}}, {{t+|ru|сви́стнуть|pf}}
