--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -61,7 +61,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Spanish: {{t+|es|no obstante}}
 * Swahili: {{t|sw|ijapokuwa}}, {{t|sw|hata hivyo}}
 * Swedish: {{t+|sv|dock}}
-* Ukrainian: {{t|uk|тим не менш|tr=tym ne mensh|sc=Cyrl}}
+* Ukrainian: {{t|uk|тим не менш}}
 * Urdu: {{t|ur|گرچہ}}
 * Volapük: [[do#Volapük|do]]
 * Walloon: {{t+|wa|portant}}
@@ -104,7 +104,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Irish: {{t|ga|cé go}}
 * Italian: {{t|it|[[anche]] [[se]]}}
 {{trans-mid}}
-* Japanese: {{t+|ja|だが|tr=daga}}, {{t|ja|だけれども|tr=dakeredomo}}, {{t|ja|だけど|tr=dakeredo}}{{qualifier|colloquial}}
+* Japanese: {{t+|ja|だが|tr=daga}}, {{t|ja|だけれども|tr=dakeredomo}}, {{t|ja|だけど|tr=dakeredo}} {{qualifier|colloquial}}
 * Malay: {{t|ms|walau}}
 * Navajo: {{t|nv|ndi}}
 * Norwegian: {{t+|no|selv om}}
