/* Noun */ +sense with quote <rot#54693948>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -109,6 +109,9 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 {{en-noun|~}}
 
 # The process of becoming [[rotten]]; [[putrefaction]].
+# [[decay|Decaying]] matter.
+#* {{quote-book|en|title=Unseen City|author=Nathanael Johnson|year=2016|ISBN=9781623363857|page=115
+|passage=When a turkey vulture detects the scent of '''rot''', it circles down, tracing the plume of chemicals to its source.}}
 # Any of several [[disease]]s in which [[breakdown]] of [[tissue]] occurs.
 #* {{rfdate||and other bibliographic particulars, eg, title of work, page, url}} {{w|John Milton}}
 #*: His cattle must of '''rot''' and murrain die.
@@ -121,11 +124,11 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 {{trans-top|process of becoming rotten}}
 * Latin: {{t|la|cariēs|f}}, {{t|la|tabēs|f}}
 {{trans-mid}}
-* Spanish: {{t+|es|putrefacción}}, {{t+|es|podre}}
+* Spanish: {{t+|es|putrefacción|f}}, {{t+|es|podre|f}}
 {{trans-bottom}}
 
 {{trans-top|verbal nonsense}}
-* Maori: {{t|mi|kohe }}
+* Maori: {{t|mi|kohe}}
 {{trans-mid}}
 {{trans-bottom}}
 
