--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -121,7 +121,9 @@ From {{m|en|bend}}.
 # Particular direction or tendency; flexion; course.
 #* John Locke
 #*: '''bents''' and turns of the matter
-# {{lb|en|carpentry}} A [[transverse]] [[frame]] of a framed [[structure]].
+# {{lb|en|carpentry}} A [[transverse]] [[frame]] of a framed [[structure]]; a subunit of framing.
+## Such a subunit as a component of a [[barn]]'s framing, joined to other bents by [[girt]]s and summer beams. 
+## Such a subunit as a reinforcement to, or integral part of, a [[bridge]]'s framing. 
 # Tension; force of acting; energy; impetus.
 #* Norris
 #*: the full '''bent''' and stress of the soul
