--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -97,7 +97,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{trans-mid}}
 * Japanese: {{t+|ja|杖|tr=tsue|sc=Jpan}}, {{t+|ja|棒|tr=bō|sc=Jpan}}
 * Latin: {{t|la|baculum}}, {{t|la|scīpiō|m}}
-* Macedonian: {{t|mk|стап|m|tr=stap}}
+* Macedonian: {{t|mk|стап|m}}
 * Malagasy: {{t+|mg|langilangy}}, {{t+|mg|tehina}}
 * Maori: {{t|mi|turupou}}, {{t|mi|huakau}} {{qualifier|when used as a weapon}}, {{t|mi|titipou}}
 * Norwegian: {{t|no|stav}}
@@ -134,7 +134,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{trans-mid}}
 * Italian: {{t+|it|pentagramma|m}}, {{t+|it|rigo|m}}
 * Japanese: {{t|ja|譜表|tr=fuhyō|sc=Jpan}}, {{t|ja|五線|tr=gosen|sc=Jpan}}
-* Macedonian: {{t|mk|петолиние|n|tr=petolínie}}
+* Macedonian: {{t|mk|петолиние|n}}
 * Maori: {{t|mi|tārawa}}
 * Occitan: {{t+|oc|portada|f}}
 * Polish: {{t+|pl|pięciolinia|f}}
@@ -170,7 +170,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Khmer: {{t-needed|km}}
 * Lao: {{t|lo|ພະນັກງານ}}
 {{trans-mid}}
-* Macedonian: {{t|mk|персонал|m|tr=personál}}, {{t|mk|кадар|m|tr=kádar}}
+* Macedonian: {{t|mk|персона́л|m}}, {{t|mk|кадар|m}}
 * Malay: {{t|ms|kakitangan}}
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t|no|personale}}
@@ -254,8 +254,11 @@ Sense of "group of military officers that assists a commander" and similar meani
 
 ==Catalan==
 
+===Pronunciation===
+* {{ca-IPA|estaf}}
+
 ===Noun===
-{{head|ca|noun|g=m}}
+{{ca-noun|m|-}}
 
 # {{l|en|staff}} {{gloss|employees}}
 
@@ -320,6 +323,9 @@ Borrowed from {{bor|it|en|staff}}.
 ----
 
 ==Spanish==
+
+===Pronunciation===
+* {{es-IPA|estaf}}
 
 ===Noun===
 {{es-noun|m|-}}
