/* Translations */ Added another Ancient Greek translation of this word. <bubble#54902496>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -385,7 +385,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Galician: {{t+|gl|burbullar}}
 * German: {{t+|de|blubbern}}
 * Greek: {{t+|el|χοχλάζω}}
-*: Ancient Greek: {{t|grc|παφλάζω}}
+*: Ancient: {{t|grc|παφλάζω}}, {{t|grc|πομφολύζω}}
 * Hebrew: {{t+|he|פעפוע}} (pipua')
 * Hungarian: {{t+|hu|buborékol}}, {{t+|hu|bugyborékol}}
 * Ido: {{t+|io|ebuliar}}, {{t+|io|ebulieskar}}
