--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -21,7 +21,7 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 ====Derived terms====
 * {{l|en|erotica}}
 * {{l|en|Hebraica}}
-* {{l|enaica}}
+* {{l|en|Judaica}}
 
 ===Anagrams===
 * {{anagrams|en|a=aci|ACI|C. I. A.|C.I.A.|CAI|CIA|Cai|Cai.|Cài}}
