--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -107,7 +107,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}}, {{t+|ja|立ち会う|tr=たちあう, tachiau}}
 * Korean: {{t+|ko|출석하다}}
 * Latin: {{t|la|intersum}}, {{t+|la|audio}}
-* Macedonian: {{t|mk|присуствува|tr=prisustvuva|sc=Cyrl}}
+* Macedonian: {{t|mk|присуствува}}
 * Occitan: {{t|oc|assistir}}
 * Polish: {{t+|pl|uczęszczać}}, {{t+|pl|brać udział}}
 * Portuguese: {{t+|pt|assistir}}, {{t|pt|[[participar]] [[de]]}}, {{t|pt|[[estar]] [[presente]] [[em]]}}, {{t+|pt|comparecer}}
@@ -168,6 +168,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{inh|en|ang|ātendan||to 
 ==French==
 
 ===Pronunciation===
+* {{fr-IPA}}
 * {{audio|fr|LL-Q150 (fra)-Pamputt-attend.wav|Audio}}
 
 ===Verb===
