/* Translations */ Added Latin translation of this word. <pledge#54989193>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -149,6 +149,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 *: Ancient: {{t|grc|ῥύσιον|n}}
 * Hungarian: {{t+|hu|zálog}}, {{t+|hu|biztosíték}}, {{t+|hu|fedezet}}
 * Italian: {{t+|it|avallo|m}}, {{t+|it|garanzia|f}}
+* Latin: {{t|la|pignus|n}}
 * Maori: {{t|mi|tāmana}}
 {{trans-mid}}
 * Persian: {{t+|fa|گرو|tr=gerow|sc=fa-Arab}}
