--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -155,7 +155,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 {{trans-mid}}
 * Lak: {{t|lbe|гьарахъалу}}
 * Lakota: {{t|lkt|onákpaŋ}}
-* Latin: {{t|la|mola}}, {{t|la|molendinum|n}}
+* Latin: {{t|la|mola}}
 * Latvian: {{t|lv|malējs}}
 * Lithuanian: {{t+|lt|malūnas|m}}
 * Luxembourgish: {{t|lb|Millen|f}}
@@ -246,7 +246,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Korean: {{t+|ko|방앗간}}
 * Latgalian: {{t|ltg|patmalis}}, {{t|ltg|dziernovys}}
 {{trans-mid}}
-* Latin: {{t|la|mola|f}}
+* Latin: {{t|la|molae|f-p}}, {{t|la|molendinum|n}}
 * Latvian: {{t|lv|dzirnavas|f-p}}
 * Lithuanian: {{t+|lt|malūnas|m}}
 * Macedonian: {{t|mk|млин|m}}, {{t|mk|ме́лница|f}}
