--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -7,7 +7,7 @@
 Colloquial form of {{m|en|yea}} or {{m|en|yes}}.
 
 ===Pronunciation===
-* {{IPA|en|[ˈjɛ.ə]}}, {{IPAchar|[ˈjæ.ə]}}
+* {{IPAchar|/jæ/, IPA|en|[ˈjɛ.ə]}}, {{IPAchar|[ˈjæ.ə]}}
 * {{audio|en|en-us-yeah.ogg|Audio (US)}}
 * {{audio|en|en-us-yeah-interjection.ogg|Audio (US, interjection)}}
 * {{rhymes|en|ɛə}}
