--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -203,6 +203,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Iu Mien: {{t|ium|dungz}}
 * Japanese: {{t+|ja|豚|tr=ぶた, buta}}, {{t+|ja|ブタ|tr=buta}}
 * Javanese: {{t+|jv|babi}}
+* Jeju: {{t|jje|도새기}}
 * Jingpho: {{t|kac|wa'}}
 * Kabardian: {{t|kbd|кхъуэ}}
 * Kannada: {{t+|kn|ಹಂದಿ}}
