--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -143,7 +143,7 @@ From {{inh|en|enm|cop}}, {{m|enm|coppe}}, from {{inh|en|ang|cop}}, {{m|ang|copp}
 # [[basket]]
 
 ===References===
-* Juliette Blevins, ''[https://julietteblevins.ws.gc.cuny.edu/files/2016/10/Blevins2009_AndamanesePreHistory.pdf Linguistic clues to Andamanese pre-history: Understanding the North-South divide]'' (2016)
+* Juliette Blevins, ''[https://julietteblevins.ws.gc.cuny.edu/files/2016/10/Blevins2009_AndamanesePreHistory.pdf Linguistic clues to Andamanese pre-history: Understanding the North-South divide]'', pg. 20 (2009)
 
 ----
 
