/* Translations */ Added Latin translation of this word. <consumption#55083098>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -49,6 +49,7 @@ From {{etyl|fro|en}} {{m|fro|consumpcion}}, from {{etyl|la|en}} {{m|la|consumpti
 * Interlingua: {{t|ia|consumo}}
 * Japanese: {{t+|ja|消費|tr=しょうひ, shōhi}}
 * Korean: {{t+|ko|소비}} ({{t+|ko|消費}})
+* Latin: {{t|la|absūmēdō|f}}
 * Malay: {{t|ms|penggunaan}}, {{t|ms|konsumsi}}
 * Maori: {{t|mi|whakahemonga}}
 * Norwegian:
