--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -14,6 +14,7 @@
 
 ====Translations====
 {{trans-top|several}}
+* Azerbaijani: {{t|az|bir sıra}}
 * Chinese:
 *: Mandarin: {{t+|cmn|幾個}}, {{t+|cmn|几个|tr=jǐgè}}, {{t+|cmn|一些|tr=yīxiē}}, {{t+|cmn|若干|tr=ruògān}}
 * Danish: {{t-needed|da}}
