--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -20,12 +20,27 @@ Borrowed from {{bor|nl|id|bahasa}}, eventually from {{der|nl|sa|भाषा||la
 ===Etymology===
 From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 
+===Pronunciation===
+* {{IPA|id|/baˈhasa/}}
+* {{hyphenation|ba|ha|sa}}
+
 ===Noun===
 {{id-noun}}
-
 # [[language]] {{gloss|system of communication using words or symbols}}
 
 ====Derived terms====
+{{der4|id|
+| berbahasa
+| berbahasa-bahasa
+| kebahasaan
+| membahasakan
+| memperbahasakan
+| perbahasa
+| perbahasaan
+| sebahasa
+|}}
+
+====Compound terms====
 * {{l|id|bahasa baku}}
 * {{l|id|bahasa Indonesia}}
 * {{l|id|juru bahasa}}
@@ -35,8 +50,10 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 * {{desc|bor=1|nl|bahasa}}
 * {{desc|bor=1|en|Bahasa}} {{i|with Malay {{l|ms|bahasa}}}}
 
-[[Category:id:Language]]
+===Further reading===
+* {{R:KBBI Daring}}
 
+[[Category:id:Language]]
 ----
 
 ==Malay==
