+rhyme [[Rhymes:Danish/id|-id]] <bid#55168200>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -296,6 +296,7 @@ From {{der|da|non|bit}}.
 
 ====Pronunciation====
 * {{IPA|da|/bid/|[b̥ið]}}
+* {{rhymes|da|id}}
 
 ====Noun====
 {{da-noun|et|bid|stem=bidd}}
