/* Noun */ <rules of the road#55436063>

--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -5,6 +5,10 @@
 {{en-plural noun}}
 
 # The [[law]]s that govern [[driving]], especially of [[motorist]]s and [[cyclist]]s.
+# {{lb|en|metaphoric}} A set of standard procedures or regulations governing the way something is done. 
+#* {{quote-book|en|year=2005  |title=The Road Ahead: Middle East Policy in the Bush Administration's Second Term |author=Flynt Leverett |page=105 |ISBN=|passage=A regional security framework with a relatively broad mandate could also establish badly needed "'''rules of the road'''" for regional states in a post-Saddam environment, which would be highly valued by the Saudis. }}
+#* {{quote-book|en|year=2012 |title=Fast Facts for the Student Nurse|author=Susan Stabler-Haas|page= |ISBN=|passage=That clinical instructor will begin the course by giving you an “orientation day.” Pay attention! You need to know the '''rules of the road''' for each instructor and each clinical facility.}}
+#* {{quote-book|en|year=2013|title=The Art of Social Enterprise: Business as if People Mattered |author=Carl Frankel, ‎Allen Bromberger |page=8 |ISBN=|passage=As it's evolved, the for-profit organizational form rewards short-term thinking and a profits-first, social-and-environmental-damage-be-damned attitude. While this is especially true at the global corporate level, the '''rules of the road''' for small businesses aren't much better.}}
 
 ====Related terms====
 * {{l|en|rule of the road}}
