--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -117,6 +117,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Spanish: {{t+|es|sin embargo}}, {{t+|es|a pesar de}}
 * Swedish: {{t+|sv|även om}}, {{t+|sv|fast}}, {{t+|sv|fastän}}
 * Ukrainian: {{t|uk|хоча́}}, {{t|uk|незважа́ючи на те, що}}
+* Zazaki: {{t|zza|velev|m}}
 {{trans-bottom}}
 
 [[Category:English basic words]]
