--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -11,38 +11,37 @@
 
 ====Translations====
 {{trans-top|''Mustela nivalis''}}
-* Albanian: {{t|sq|nuse e lalës}}
+* Albanian: {{t|sq|nuse e lalës|?}}
 * Armenian: {{t+|hy|աքիս}}
 * Basque: {{t+|eu|erbinude}}
-* Belarusian: {{t|be|ласка}}
-* Breton: {{t+|br|kaerell}}
-* Bulgarian: {{t+|bg|невестулка}}
+* Belarusian: {{t|be|ла́ска|f}}
+* Breton: {{t+|br|kaerell|f}}
+* Bulgarian: {{t+|bg|невестулка|f}}
 * Catalan: {{t+|ca|mostela|f}}
-* Czech: {{t|cs|lasice}}, {{t+|cs|kolčava}}
-* Danish: {{t+|da|brud}}
+* Czech: {{t|cs|lasice|f}}, {{t+|cs|kolčava|f}}
+* Danish: {{t+|da|brud|c}}
 * Dutch: {{t+|nl|wezel|m}}
 * Esperanto: {{t|eo|mustelo}}
 * Estonian: {{t|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
 * French: {{t+|fr|belette|f}}
-* Friulian: {{t|fur|bilite}}
+* Friulian: {{t|fur|bilite|?}}
 * Galician: {{t+|gl|donicela|f}}, {{t|gl|denociña|f}}
 * Georgian: {{t|ka|დედოფალა}}, {{t|ka|სინდიოფალა}}
 * German: {{t+|de|Wiesel|n}}
 * Greek: {{t+|el|νυφίτσα|f}}
 * Hungarian: {{t+|hu|menyét}}
-* Icelandic: {{t+|is|hreysiköttur}}, {{t|is|vesla}}
+* Icelandic: {{t+|is|hreysiköttur|m}}, {{t|is|vesla|?}}
 * Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
 * Korean: {{t|ko|무산쇠족제비}}
-* Ladin: {{t|lld|belora}}
-* Latvian: {{t|lv|zebiekste}}
-* Lithuanian: {{t|lt|žebenkštis}}
-* Macedonian: {{t|mk|невестулка}}
+* Ladin: {{t|lld|belora|?}}
+* Latvian: {{t|lv|zebiekste|?}}
+* Lithuanian: {{t|lt|žebenkštis|?}}
+* Macedonian: {{t|mk|невестулка|f}}
 {{trans-mid}}
-* Maltese: {{t|mt|ballottra}}
+* Maltese: {{t|mt|ballottra|?}}
 * Navajo: {{t|nv|dlǫ́ʼii yázhí}}
-* Norwegian: {{t|no|snømus}}
 * Occitan: {{t+|oc|mostèla|f}}, {{t|oc|polida|f}}
 * Polish: {{t+|pl|łasica|f}}
 * Portuguese: {{t+|pt|doninha|f}}
@@ -50,23 +49,23 @@
 * Romanian: {{t+|ro|nevăstuică|f}}
 * Romansch: {{t|rm|mustaila|f}}
 * Russian: {{t+|ru|ла́ска|f}}
-* Sami: [[nirpi]]
-* Sardinian: {{t|sc|bucca de mele}}, {{t|sc|bucchemeli}}
-* Scottish Gaelic: {{t|gd|neas bheag}}
+* Sami: {{t-check|se|nirpi}}
+* Sardinian: {{t|sc|bucca de mele|?}}, {{t|sc|bucchemeli|?}}
+* Scottish Gaelic: {{t|gd|neas bheag|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|ласица|f|sc=Cyrl}}
-*: Roman: {{t+|sh|lasica}}
-* Slovak: {{t|sk|lasica}}
-* Slovene: {{t+|sl|podlasica}}
+*: Cyrillic: {{t|sh|ла̀сица|f}}
+*: Roman: {{t+|sh|làsica|f}}
+* Slovak: {{t|sk|lasica|f}}
+* Slovene: {{t+|sl|podlasica|f}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|łasyca|f}}, {{t|dsb|łasycka|f}}
 *: Upper Sorbian: {{t|hsb|kohlica|f}}
 * Spanish: {{t+|es|mostela|f}}
-* Swedish: {{t+|sv|vessla}}
+* Swedish: {{t+|sv|vessla|c}}
 * Turkish: {{t+|tr|gelincik}}
-* Ukrainian: {{t|uk|ласиця}}
-* Welsh: {{t|cy|bronwen}}, {{t|cy|gwenci}}
-* West Frisian: {{t|fy|wezeling}}
+* Ukrainian: {{t|uk|ласиця|?}}
+* Welsh: {{t|cy|bronwen|?}}, {{t|cy|gwenci|?}}
+* West Frisian: {{t|fy|wezeling|?}}
 {{trans-bottom}}
 
 [[Category:en:Mustelids]]
