--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -2,9 +2,9 @@
 [[File:Veasel.jpg|thumb|right|'''ermine''', ''Mustela erminea'']]
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|ermine}}, {{m|enm|ermin}}, {{m|enm|ermyn}}, from {{etyl|fro|en}} {{m|fro|ermin}}, {{m|fro|ermine}}, {{m|fro|hermine}}.
+From {{inh|en|enm|ermine}}, {{m|enm|ermin}}, {{m|enm|ermyn}}, from {{der|en|fro|ermin}}, {{m|fro|ermine}}, {{m|fro|hermine}}.
 
-There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. Germanic origin is suggested via {{cog|odt|*harmino|t=stoat skin}}, from {{m|odt|*harmo|t=stoat, weasel}} (compare {{cog|nl|hermelijn}} and dialectal {{m|nl|herm}}), from {{etyl|gem-pro|en}} {{m|gem-pro|*harmǭ}}, {{m|gem-pro|*harmô}} (compare {{cog|ang|hearma}}, {{cog|goh|harmo}} ({{m|goh|harmin|pos=a}}, obsolete German {{m|de|Harm}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ḱormō}} (compare {{cog|rm|carmun}}, obsolete Lithuanian {{m|lt|šarmuõ}}). Romance sources identify the animal with the corresponding word for [[Armenian]], possibly from {{cog|ML.|[[mūs]] [[Armenius]]||Armenian mouse}} or a posterior compound.
+There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}} origin is suggested via {{cog|odt|*harmino|t=stoat skin}}, from {{m|odt|*harmo|t=stoat, weasel}} (compare {{cog|nl|hermelijn}} and dialectal {{m|nl|herm}}), from {{der|en|gem-pro|*harmǭ}}, {{m|gem-pro|*harmô}} (compare {{cog|ang|hearma}}, {{cog|goh|harmo}} ({{m|goh|harmin|pos=a}}, obsolete {{cog|de|Harm}}), from {{der|en|ine-pro|*ḱormō}} (compare {{cog|rm|carmun}}, obsolete {{cog|lt|šarmuõ}}). Romance sources identify the animal with the corresponding word for [[Armenian]], possibly from {{der|en|ML.|[[mūs]] [[Armenius]]|t=Armenian mouse}} or a posterior compound.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈɜːmɪn/}}
