--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -50,16 +50,16 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 
 ==Latin==
 
-===Suffix===
+===Pronunciation===
+* {{la-IPA|ann=1}}
+* {{la-IPA|-icā|ann=1}}
+
+===Suffix 1===
 {{la-suffix-form|-ica}}
 
-# {{inflection of|la|-icus||nom|f|s}}
-# {{inflection of|la|-icus||nom|n|p}}
-# {{inflection of|la|-icus||acc|n|p}}
-# {{inflection of|la|-icus||voc|f|s}}
-# {{inflection of|la|-icus||voc|n|p}}
+# {{inflection of|la|-icus||nom//voc|f|s|;|nom//acc//voc|n|p}}
 
-===Suffix===
+===Suffix 2===
 {{la-suffix-form|-icā}}
 
 # {{inflection of|la|-icus||abl|f|s}}
