--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -19,9 +19,11 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 * {{l|en|-ia}}
 
 ====Derived terms====
-* {{l|en|erotica}}
-* {{l|en|Hebraica}}
-* {{l|en|Judaica}}
+{{suffixsee|en}}
+{{der2|en
+|erotica
+|Hebraica
+}}
 
 ===Anagrams===
 * {{anagrams|en|a=aci|ACI|C. I. A.|C.I.A.|CAI|CIA|Cai|Cai.|Cài}}
@@ -29,6 +31,9 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 ----
 
 ==Catalan==
+
+===Pronunciation===
+* {{ca-IPA}}
 
 ===Suffix===
 {{head|ca|suffix}}
@@ -44,6 +49,7 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 
 # {{feminine noun of|nl|-icus}}
 
+====Derived terms====
 {{suffixsee|nl}}
 
 ----
@@ -69,7 +75,7 @@ Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 ==Polish==
 
 ===Alternative forms===
-* {{l|pl|-yca}}
+* {{alter|pl|-yca}}
 
 ===Etymology===
 From {{inh|pl|sla-pro|*-ica}}.
@@ -94,6 +100,9 @@ From {{inh|pl|sla-pro|*-ica}}.
 
 # {{feminine singular of|pt|-ico}}
 
+====Derived terms====
+{{suffixsee|pt}}
+
 ----
 
 ==Serbo-Croatian==
@@ -109,6 +118,7 @@ From {{inh|sh|sla-pro|*-ica}}.
 # {{feminine of|sh|-ik}}
 
 ====Derived terms====
+{{suffixsee|sh}}
 * {{l|sh|-arica}}
 * {{l|sh|-čica}}
 
@@ -116,7 +126,13 @@ From {{inh|sh|sla-pro|*-ica}}.
 
 ==Spanish==
 
+===Pronunciation===
+* {{es-IPA}}
+
 ===Suffix===
 {{head|es|suffix form}}
 
 # {{feminine singular of|es|-ico}}
+
+====Derived terms====
+{{suffixsee|es}}
