--- a/en/f/fixigena.856093.wikitext
+++ b/en/f/fixigena.856093.wikitext
@@ -6,7 +6,7 @@
 # {{lb|en|anatomy}} The "fixed cheek" cephalic shell surrounding [[glabella]] inside of facial sutures.
 
 ====See also====
-* [[librigena]]
+* {{l|en|librigena}}
 
 ===References===
-http://www.fossilmuseum.net/glossaries/trilobitesglossary.htm
+* [http://www.fossilmuseum.net/glossaries/trilobitesglossary.htm]
