--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -36,9 +36,7 @@
 |pageurl=http://books.google.com.au/books?id=Zf6pZp20qxEC&pg=PA91&dq=%22stoat%22%7C%22stoats%22&hl=en&sa=X&ei=4Tk0U63NJYX3lAWaz4H4Cw&redir_esc=y#v=onepage&q=%22stoat%22%7C%22stoats%22&f=false
 |page=91
 |passage=European '''stoats''' were long ago introduced to New Zealand (along with ferrets and weasels!) in the mistaken belief that they would control the burgeoning populations of introduced rabbits.}}
-
-====Synonyms====
-* {{sense|Mustela erminea}} {{l|en|ermine}} {{qualifier|especially when in white winter coat}}, {{l|en|short-tailed weasel}} {{qualifier|US}}
+#: {{syn|en|ermine|q1=especially when in white winter coat|short-tailed weasel|q2=US}}
 
 ====Translations====
 {{trans-see|stoat|ermine}}
