--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -35,7 +35,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 * Georgian: {{t|ka|ქრცვინი}}
 * German: {{t-needed|de}}
 * Japanese: {{t-needed|ja}}
-* Scottish Gaelic: {{t|gd|feòcallan|m}}
+* Scottish Gaelic: {{t|gd|feocallan|m}}
 {{trans-bottom}}
 
 {{trans-top|''Mustela putorius''}}
@@ -83,7 +83,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 * Romansch: {{t|rm|telpi|m}}
 * Russian: {{t+|ru|хорёк|m}}, {{t+|ru|хорь|m}}, {{t|ru|хорь чёрный|m}}, {{t|ru|хорь лесно́й|m}}
 * Sardinian: {{t|sc|pùtzola|?}}
-* Scottish Gaelic: {{t|gd|feòcallan-Eòrpach|m}}
+* Scottish Gaelic: {{t|gd|feocallan-Eòrpach|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|тво̑р|m}}
 *: Latin: {{t+|sh|tvȏr|m}}
