t+es:[[tira]] t+es:[[chota]] ([[WT:EDIT|Assisted]]) <pig#57104244>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -471,7 +471,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Polish: {{t+|pl|pies|m}}
 * Portuguese: {{t+|pt|porco|m}}
 * Russian: {{t+|ru|му́сор|m}}
-* Spanish: {{t+|es|milico|m}} {{qualifier|Andes|River Plate region}}
+* Spanish: {{t+|es|milico|m}} {{qualifier|Andes|River Plate region}}, {{t+|es|tira|f}} {{qualifier|S Mexico}}, {{t+|es|chota}} {{qualifier|N Mexico}}
 * Swahili: {{t+|sw|nguruwe}}
 {{trans-bottom}}
 
