--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -51,7 +51,7 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 * Greek: {{t|el|ανώτατο όριο|n}}, {{t+|el|άκρον άωτον|n}}
 * Hebrew: {{t|he|מַכְּסִימוּם|m|tr=maximum}}, {{t+|he|מֵרַב|m|tr=mēráv}}
 * Ido: {{t+|io|maximo}}
-* Indonesian: {{t+|id|maksimum}}, {{t+|id|plafon}}
+* Indonesian: {{t+|id|maksimum}}, {{t+|id|plafon}}, {{t+|id|pagu}}
 * Interlingue: {{t|ie|maximum}}
 * Italian: {{t+|it|massimo|m}}
 * Japanese: {{t+|ja|最大|tr=さいだい, saidai}}, {{t|ja|極大|tr=きょくだい, kyokudai}}
