--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -286,6 +286,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * German: {{t+|de|Fabrik|f}} {{qualifier|general}}, {{t+|de|Werk|n}} {{qualifier|general}} {{t|de|Papiermühle|f}} {{qualifier|for paper}}
 * Greek: {{t+|el|εργοστάσιο|n}}
 * Hebrew: {{t+|he|טַחֲנָה|tr=takhánah}}
+* Hindi: {{t+|hi|मिल|f}}
 * Hungarian: {{t+|hu|üzem}}, {{t+|hu|gyár}}, {{t+|hu|telep}}, {{t+|hu|mű|alt=-mű}}
 * Irish: {{t|ga|muileann|m}}
 * Italian: {{t+|it|mulino|m}}, {{t+|it|macinatoio|m}}
@@ -433,6 +434,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Slovene: {{t|sl|mleti|impf}}
 * Spanish: {{t+|es|moler}}
 * Swedish: {{t+|sv|mala}}
+* Tibetan: {{t|bo|འཐག}}
 * Ukrainian: {{t|uk|моло́ти|impf}}
 * Volapük: {{t|vo|mülön}}
 {{trans-bottom}}
