--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -28,18 +28,20 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 
 ====Translations====
 {{trans-top|weasel of the genus ''Mustela''}}
+* Arabic: {{t|ar|نِمْس|m}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Finnish: {{t+|fi|kärppä}}
 {{trans-mid}}
 * Georgian: {{t|ka|ქრცვინი}}
-* German: {{t-needed|de}}
+* German: {{t|de|[[Geschlecht]] [[der]] [[Wiesel]], [[Iltis]]se und [[Marder]]|n}}
 * Japanese: {{t-needed|ja}}
 * Scottish Gaelic: {{t|gd|feocallan|m}}
 {{trans-bottom}}
 
 {{trans-top|''Mustela putorius''}}
 * Albanian: {{t|sq|bundër|f}}, {{t+|sq|qelbës|m}}
+* Arabic: {{t|ar|نِمْس|m}}
 * Armenian: {{t+|hy|ժանտաքիս}}
 * Basque: {{t|eu|ipurtats}}
 * Belarusian: {{t|be|тхор лясны́|m}}, {{t|be|тхор чо́рны|m}}, {{t|be|тхор|m}}
