/* Middle English */ <at#57807524>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -703,7 +703,7 @@ From {{inh|enm|ang|æt}}.
 * {{desc|sco|at}}
 
 ====References====
-* {{R:MED Online|at|prep|1733384}}
+* {{R:MED Online|at|prep|MED2734}}
 
 ===Etymology 2===
 From {{bor|enm|non|at}}.
@@ -714,7 +714,7 @@ From {{bor|enm|non|at}}.
 # {{lb|enm|North ME|northern|_|East Midland ME}} [[to]] {{gl|infinitive-marker}}
 
 ====References====
-* {{R:MED Online|at|adv|1733384}}
+* {{R:MED Online|at|adv|MED2735}}
 ----
 
 ==Min Nan==
