--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -130,7 +130,7 @@ From {{bor|en|frm|marmote}}, from {{der|en|fro|marmotaine}}, {{m|fro|marmontaine
 ==Dutch==
 
 ===Etymology===
-Borrowed from {{bor|nl|fr|marmotte}}. Possibly related to {{m|dum|marmotte||goblin, kobold}}.
+Borrowed from {{bor|nl|fr|marmotte}}. Possibly related to {{m+|dum|marmotte||goblin, kobold}}.
 
 ===Pronunciation===
 * {{IPA|nl|/mɑrˈmɔt/}}
