--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -138,7 +138,7 @@ Borrowed from {{bor|nl|fr|marmotte}}. Possibly related to {{m+|dum|marmotte||gob
 * {{rhymes|nl|ɔt}}
 
 ===Noun===
-{{nl-noun|f|-|-}}
+{{nl-noun|f|-en|-}}
 
 # {{l|en|marmot}}, rodent of the genus ''[[Marmota]]''
 
