--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -29,7 +29,7 @@
 * Estonian: {{t|et|sõjavang}}
 * Faroese: {{t|fo|krígsfangi|m}}
 * Finnish: {{t+|fi|sotavanki}}
-* French: {{t+|fr|prisonnier de guerre|m}}
+* French: {{t+|fr|prisonnier de guerre|m}}, {{t|fr|prisonnière de guerre|f}}
 * Georgian: {{t|ka|სამხედრო ტყვე}}
 * German: {{t+|de|Kriegsgefangener|m}}, {{t+|de|Kriegsgefangene|f}}
 * Greek: {{t|el|αιχμάλωτος πολέμου|m|f}}
