<prisoner of war#57823920>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -46,7 +46,7 @@
 * Latin: {{t|la|dēditīcius|m}}
 * Malay: {{t|ms|tahanan perang}}
 * Navajo: {{t|nv|yisnááh}}
-* Norwegian: {{t|no|krigsfange|m}}
+* Norwegian:
 *: Bokmål: {{t|nb|krigsfange|m}}
 *: Nynorsk: {{t+|nn|krigsfange|m}}
 * Persian: {{t+|fa|اسیر|tr=asir|sc=fa-Arab}}
