--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -584,8 +584,10 @@ From {{inh|mvi|jpx-ryu-pro|sort=ついきい|*tuki}}.
 ==Okinawan==
 
 ===Kanji===
-{{head|ryu|Han character}}
-{{ja-readings
+{{ryu-kanji}}
+
+====Readings====
+{{ryu-readings
 |on=ぐゎち<ぐゎつぃ
 |kun=ちち<つぃち
 }}
@@ -610,6 +612,7 @@ From {{inh|mvi|jpx-ryu-pro|sort=ついきい|*tuki}}.
 * {{q|topicalized}} {{alter|ryu|月ぇ|tr=chichē}}
 
 ===Etymology===
+{{ryu-kanjitab|ちち|yomi=k}}
 From {{inh|ryu|jpx-ryu-pro|sort=ちち|*tuki}}, from {{inh|ryu|jpx-pro|sort=ちち|*tukuy}}.
 
 Cognate with {{cog|ja|月|tr=tsuki}}.
@@ -619,7 +622,7 @@ Cognate with {{cog|ja|月|tr=tsuki}}.
 * {{IPA|ryu|[t͡ɕi̻t͡ɕi]|sort=ちち}}
 
 ===Noun===
-{{head|ryu|noun|hiragana|ちち|rōmaji|chichi|historical hiragana|つぃち|sort=ちち}}
+{{ryu-noun|ちち|hhira=つぃち|sort=ちち}}
 
 # the [[moon]]
 # a [[month]]
