/* Noun */ add color <rose gold#57847739>

--- a/en/r/rose gold.855393.wikitext
+++ b/en/r/rose gold.855393.wikitext
@@ -7,6 +7,16 @@
 
 # A [[gold]]-[[copper]] [[alloy]] used in jewelry for its reddish color.
 #: {{synonyms|en|pink gold|red gold}}
+# An [[orange]]-[[pink]] color, similar to the alloy.
+#* '''1998''', Douglas Hobbie, ''This Time Last Year'', [https://books.google.com/books?id=QkJF5KTDg_cC&pg=PA125&dq=%22a+rose+gold%22 page 125]:
+#*: I walk around the house, billowy clouds reflecting a '''rose-gold''' sunset.
+#* '''2007''', L. A. Banks, ''The Cursed'', [https://books.google.com/books?id=JADWopTib8MC&pg=PT360&dq=%22in+rose+gold%22 unnumbered page]:
+#*: {{...}} as she watched the Middle Eastern sun paint Jerusalem stones bathed in '''rose-gold'''.
+#* '''2018''', Carol Marinelli, ''Claiming His Hidden Heir'', [https://books.google.com/books?id=_0Y2DwAAQBAJ&pg=PT119&dq=%22rose+gold+dress%22 unnumbered page]:
+#*: Over the bikini she pulled on the '''rose-gold''' dress that was so loose and flowing, and yet so sensual.
+#: {{color panel|f9b38d}}
 
 ====Usage notes====
 * While the terms ''rose gold'', ''pink gold'' and ''red gold'' are often used interchangeably, they may be used more specifically to indicate the proportion of copper (which gives the red colour). In that case, pink gold uses the least copper, followed by rose gold, with red gold having the highest copper content.
+
+[[Category:en:Pinks]]
