--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -173,13 +173,32 @@ Via {{der|en|fr|-}} from {{der|en|la|maximum}}.
 
 ==Dutch==
 
+===Etymology===
+Borrowed from {{bor|nl|la|maximum}}.
+
 ===Pronunciation===
+* {{IPA|nl|/ˈmɑk.siˌmʏm/}}
 * {{audio|nl|nl-maximum.ogg|audio}}
+* {{hyphenation|nl|ma|xi|mum}}
 
 ===Noun===
 {{nl-noun|n|maxima|pl2=maximums|maximumpje}}
 
-# [[#English|maximum]]
+# {{l|en|maximum}}
+
+====Antonyms====
+* {{l|nl|minimum}}
+
+====Derived terms====
+* {{l|nl|maximumleeftijd}}
+* {{l|nl|maximumloon}}
+* {{l|nl|maximumsnelheid}}
+
+====Related terms====
+* {{l|nl|maximaal}}
+
+====Descendants====
+* {{desc|af|maksimum}}
 
 ----
 
