--- a/en/l/land of opportunity.856422.wikitext
+++ b/en/l/land of opportunity.856422.wikitext
@@ -5,7 +5,7 @@
 * {{audio|en|En-au-land of opportunity.ogg|Audio (AU)}}
 
 ===Noun===
-{{head|en|noun}}
+{{en-noun|-}}
 
 # {{lb|en|informal|idiomatic}} The [[United States]].
 #* ''They say America is the '''land of opportunity'''. Opportunity for what? For children to run in the dirty streets?'' - Mr Mousekewitz in ''{{w|An American Tail: Fievel Goes West}}''
