/* Translations */ Added Latin translation of this word. <bid#57856477>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -202,6 +202,7 @@ From {{der|en|enm|beden}}, from the {{der|en|ang|-}} verb {{m|ang|bēodan||offer
 * Italian: {{t+|it|offerta|f}}
 * Japanese: {{t+|ja|付け値|tr=つけね, tsukene}}
 * Korean: {{t-needed|ko}}
+* Latin: {{t|la|licitatio|f}}
 * Maltese: {{t-needed|mt}}
 {{trans-mid}}
 * Maori: {{t|mi|piti}}
