--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -2,18 +2,18 @@
 ==English==
 
 ===Etymology===
-From {{etyl|frm|en}} {{m|frm|partage}}, from {{m|frm|partir||to share}}.
+From {{der|en|frm|partage}}, from {{m|frm|partir||to share}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈpɑːtɪdʒ/}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # {{lb|en|obsolete}} A [[part]], [[portion]] or [[share]].
 # {{lb|en|now|_|rare}} [[division|Division]], [[sharing]]; the act of [[portioning]] out or dividing up.
 #* {{RQ:Florio Montaigne Essayes|chapter=46|book=I|passage=looke into our Royall house, where so many '''partages''' [tr. {{m|frm|partage|partages}}], so many surnames, and so many severall titles have so encumbred us, that the originall of the stocke is utterly lost.}}
-# {{lb|en|archaic|archaeology}} The one-time standard practice of the [[divvying]] up of [[artifact]]s between [[archaeologists]], their [[patrons]] and the host [[territory]].
+# {{lb|en|archaic|archaeology}} The formerly standard practice of dividing up [[artifact]]s between [[archaeologist]]s, their [[patron]]s{{,}} and the host [[territory]].
 
 ===References===
 * {{R:Webster 1913}}
