/* Alternative forms */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <at#57860454>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -696,7 +696,7 @@ From {{inh|enm|ang|æt}}.
 # [[#English|at]]
 
 =====Alternative forms=====
-* {{alter|enm|et|ed|atte}}
+* {{alter|enm|et|ed}}
 
 =====Descendants=====
 * {{desc|en|at}}
