t+oc:[[teoria]] ([[WT:EDIT|Assisted]]) <theory#57867877>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -160,6 +160,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * Mongolian: {{t+|mn|онол}}
 * Moroccan Amazigh: {{t|zgh|ⵜⵉⵥⵕⵉ|tr=Tiẓṛi}}
 * Norwegian: {{t|no|teori|m}}
+* Occitan: {{t|oc|teoria|f}}
 * Pashto: {{t+|ps|نظريه|f|tr=nazaryá}}, {{t+|ps|تيوري|f|tr=tyorí}}
 * Persian: {{t+|fa|نظریه|tr=nazariye|sc=fa-Arab}}, {{t+|fa|تئوری|tr=teori|sc=fa-Arab}}
 * Polish: {{t+|pl|teoria|f}}
