--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -40,7 +40,7 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 | sebahasa
 |}}
 
-====Compound terms====
+====Compounds====
 * {{l|id|bahasa baku}}
 * {{l|id|bahasa Indonesia}}
 * {{l|id|juru bahasa}}
