/* Translations */ Added Sanskrit translation of this word. <otter#57901288>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -123,6 +123,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Romanian: {{t+|ro|lutră|f}}, {{t+|ro|vidră|f}}
 * Romansch: {{t|rm|ludra|f}}, {{t|rm|lutra|f}}
 * Russian: {{t+|ru|вы́дра|f}}
+* Sanskrit: {{t+|sa|उद्र|m}}
 * Santali: {{t|sat|ᱚᱫᱟᱢ}}, {{t|sat|ᱩᱫᱟᱢ}}
 * Sardinian: {{t|sc|lontra|?}}
 * Scottish Gaelic: {{t|gd|dòbhran|m}}
