/* Related terms */ <multiplication#57910845>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -178,15 +178,14 @@ Borrowed from {{bor|fr|la|multiplicatio|multiplicatio, multiplicationem}}.
 # multiplication (''process'')
 
 ====Related terms====
-{{rel-top}}
-* {{l|fr|multi-}}
-* {{l|fr|multiple}}
-* {{l|fr|multiplicande}}
-{{rel-mid}}
-* {{l|fr|multiplicatif}}
-* {{l|fr|multiplicité}}
-* {{l|fr|multiplier}}
-{{rel-bottom}}
+{{col3|fr
+|multi-
+|multiple
+|multiplicande
+|multiplicatif
+|multiplicité
+|multiplier
+}}
 
 ===Further reading===
 * {{R:TLFi}}
