t+da:[[hjertemuskelcelle]] ([[WT:EDIT|Assisted]]) <cardiomyocyte#57918568>

--- a/en/c/cardiomyocyte.741586.wikitext
+++ b/en/c/cardiomyocyte.741586.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{trans-top|cardiac muscle cell}}
 * Czech: {{t|cs|kardiomyocyt|m}}
+* Danish: {{t|da|hjertemuskelcelle|c}}
 * Norwegian:
 *: Bokmål: {{t+|nb|hjertemuskelcelle|f}}
 *: Nynorsk: {{t|nn|hjartemuskelcelle|f}}
