--- a/en/m/mushrooming.746868.wikitext
+++ b/en/m/mushrooming.746868.wikitext
@@ -4,6 +4,8 @@
 {{head|en|verb form}}
 
 # {{present participle of|en|mushroom|nocat=1}}
+#* {{w|H. E. Bates}}
+#*: I'll lock up and go watercressing. Or '''mushrooming'''. Or some damn thing.
 
 ===Noun===
 {{en-noun|~}}
