--- a/en/r/reanimation.741524.wikitext
+++ b/en/r/reanimation.741524.wikitext
@@ -15,7 +15,7 @@
 ====Translations====
 {{trans-top|act of reanimating}}
 * French: {{t+|fr|réanimation|f}}
-* German: {{t+|de|Reanimation|f}}
+* German: {{t+|de|Reanimation|f}}, {{t+|de|Wiederbelebung|f}}
 {{trans-mid}}
 * Indonesian: {{t|id|reanimasi}}
 * Russian: {{t+|ru|реанима́ция|f}}
