--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -142,7 +142,7 @@ Borrowed from {{bor|io|fr|qui}}, {{m|fr|que}}, {{bor|io|it|che}}, {{bor|io|es|qu
 * {{l|it|quà}} {{qual|misspelling}}
 
 ===Etymology===
-From {{inh|it|VL.||*(ec)cu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}.
+From {{inh|it|VL.||*(ec)cu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}. Cognate with {{cog|pt|cá}}, {{cog|es|acá}}, {{cog|fr|çà}}.
 
 ===Pronunciation===
 * {{IPA|it|/kwa/}}
