--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -26,11 +26,10 @@
 
 ==German==
 
-===Abbreviation===
-{{rfc-header|de|Abbreviation}}
-{{head|de|abbreviation}}
+===Noun===
+{{head|de|noun}}
 
-# [[Abendkasse]], ([[Abend]] + [[Kasse]]) an abbreviation often found on concert or event tickets indicating a price that has to be paid at the venue at the evening of the event, as opposed to a presale ticket price
+# {{abbr of|de|[[Abendkasse]]|dot=,}} often found on concert or event tickets indicating a price that has to be paid at the venue at the evening of the event, as opposed to a presale ticket price
 
 ----
 
