--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -20,6 +20,9 @@ The word is sometimes considered to come from an {{cog|xno|-}} derivative of {{c
 # {{lb|en|UK}} {{taxlink|Muscardinus avellanarius|species|noshow=1}}, the [[hazel dormouse]].
 # {{lb|en|figuratively}} A person who sleeps a great deal, or who falls asleep readily (by analogy with the sound hibernation of the dormouse).
 
+====Derived terms====
+* {{vern|Japanese dormouse}} ({{taxlink|Glirulus japonicus|species|ver=191106}})
+
 ====Translations====
 {{trans-top|rodent}}
 * Albanian: {{t|sq|gjumashi i majmë}}
