--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -84,9 +84,9 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{en-verb|bets|betting|bet|past2=betted}}
 
 # To [[stake]] or [[pledge]] upon the outcome of an event; to [[wager]].
-#* Shakespeare
+#* {{rfdatek|en|Shakespeare}}
 #*: John a Gaunt loved him well, and '''betted''' much money on his head.
-#* O. W. Holmes
+#* {{rfdatek|en|O. W. Holmes}}
 #*: I'll '''bet''' you two to one I'll make him do it.
 # To be [[sure]] of something; to be able to [[count]] on something.
 #: ''You '''bet'''!''
