--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -35,8 +35,8 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Burmese: {{t+|my|ဂေါ်ဖီပန်း|sc=Mymr}}
 * Catalan: {{t+|ca|coliflor|f}}, {{t|ca|bròquil blanc|m}}
 * Chinese:
-*: Cantonese: {{t|yue|椰花菜|tr=je⁴coi³faa¹|sc=Hani}}
-*: Mandarin: {{t+|cmn|花椰菜|tr=huāyēcài|sc=Hani}}, {{t+|cmn|菜花|tr=càihuā|sc=Hani}}, {{t+|cmn|花菜|tr=huācài}}
+*: Cantonese: {{t|yue|椰花菜|tr=je4 coi3 faa1}}
+*: Mandarin: {{t+|cmn|花椰菜|tr=huāyēcài}}, {{t+|cmn|菜花|tr=càihuā}}, {{t+|cmn|花菜|tr=huācài}}
 * Czech: {{t+|cs|květák|m}}, {{t|cs|karfiól|m}}
 * Danish: {{t+|da|blomkål}}
 * Dutch: {{t+|nl|bloemkool|f}}
