--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -4,13 +4,8 @@
 {{en-proper noun}}
 
 # {{lb|en|soccer}} {{initialism of|en|{{w|Chelsea Football Club}}}}
-
-===Initialism===
-{{rfc-header|en|Initialism}}
-{{head|en|initialism}}
-
-# {{lb|en|US}} Combined Federal Campaign
-# {{lb|en|business}} Controlled Foreign [[corporation|Corporation]]
+# {{lb|en|US}} {{init of|en|{{w|Combined Federal Campaign}}}}
+# {{lb|en|business}} {{init of|en|{{w|Controlled Foreign Corporation}}}}
 
 ===Noun===
 {{en-noun}}
