/* Derived terms */ <rot#57979695>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -335,6 +335,7 @@ From {{inh|de|gmh|rōt||red, red-haired}}, from {{inh|de|goh|rōt||red, scarlet,
 |Rötung
 |Rotwein
 |Röteln
+|rostrot
 }}
 
 ====Related terms====
