/* Derived terms */ <rot#57979831>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -337,6 +337,7 @@ From {{inh|de|gmh|rōt||red, red-haired}}, from {{inh|de|goh|rōt||red, scarlet,
 |Rotwein
 |Röteln
 |rostrot
+|rubinrot
 }}
 
 ====Related terms====
