--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -25,7 +25,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 # A [[public]] [[notice]].
 #: ''The city council placed an '''advertisement''' in the local newspaper to inform its residents of the forthcoming roadworks.''
 # A [[recommendation]] of a [[particular]] [[product]], [[service]] or [[person]].
-#: The people gave a good '''''advertisement''''' for Wiktionary.
+#: ''The good manners and intelligence of the students are an '''advertisement''' for the school.''
 
 ====Synonyms====
 * {{sense|commercial solicitation}} {{l|en|ad}}, {{l|en|advert}}
