--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -652,7 +652,8 @@ From {{inh|tpi|en|road}}.
 
 # [[road]], [[street]]
 #* ''''2003''', Mühlhäusler et al., ''Tok Pisin texts'', John Benjamins Publishing Company, page 9:
-#*: {{ux|tpi|Planti liklik '''rot''' i stap long ailan hia.|Many little roads exist on this island.}}
+#*: Planti liklik '''rot''' i stap long ailan hia.
+#*:: Many little roads exist on this island.
 
 ====References====
 Tok Pisin texts: from the beginning to the present / edited by Peter Mühlhäusler, Thomas E. Dutton, Suzanne Romaine. / John Benjamins Publishing Company / Copyright 2003 / {{ISBN|90 272 4718 8}} / page 106
