--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -60,7 +60,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 * Friulian: {{t|fur|puçul|?}}, {{t|fur|pufe|?}}, {{t|fur|pudîs|?}}, {{t|fur|spuç|?}}
 * Galician: {{t+|gl|tourón|m}}, {{t+|gl|furón|m}}
 * German: {{t+|de|Iltis|m}}
-* Greek: {{t|el|οζοϊκτίς|?}}, {{t|el|βρωμοκούναβο|?}}
+* Greek: {{t|el|βρωμοκούναβο|n}}
 * Hungarian: {{t+|hu|görény}}
 * Irish: {{t|ga|cat coille|m}}, {{t|ga|toghán|m}}
 * Italian: {{t+|it|puzzola|f}}
