--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -31,7 +31,7 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 ====Translations====
 {{trans-top|action of adjusting}}
 * Finnish: {{t+|fi|säätäminen}}, {{t+|fi|säätö}}
-* German: {{t|de|Anpassen|n}}, {{t|de|geringfügiges Ändern|n}}
+* German: {{t|de|Anpassen|n}}, {{t|de|[[geringfügiges]] [[Ändern]]|n}}
 * Maori: {{t|mi|whakarerekētanga}}
 {{trans-mid}}
 * Norwegian:
@@ -52,7 +52,7 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 * Esperanto: {{t|eo|adapto}}, {{t|eo|akomodo}}, {{t|eo|alĝustigo}}, {{t|eo|ĝustigo}}
 * Finnish: {{t+|fi|säätö}}, {{t|fi|hienosäätö}}
 * French: {{t+|fr|ajustement|m}}, {{t|fr|arèglement|m}}
-* German: {{t+|de|Anpassung|f}}, {{t+|de|Regulierung|f}}, {{t|de|geringfügige Änderung|f}}
+* German: {{t+|de|Anpassung|f}}, {{t+|de|Regulierung|f}}, {{t|de|[[geringfügige]] [[Änderung]]|f}}
 * Greek: {{t+|el|διευθέτηση|f}}, {{t+|el|ρύθμιση|f}}, {{t+|el|προσαρμογή|f}}, {{t|el|διαβάθμηση|f}}
 * Guaraní: {{t-needed|gn}}
 * Hebrew: {{t+|he|כִּוּוּן|m}}
