--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -174,6 +174,7 @@ From {{inh|fr|frm|seze}}, from {{inh|fr|fro|seize}}, {{m|fro|seze}}, from {{inh|
 * {{audio|fr|Fr-seize.ogg|audio (France)}}
 * {{a|Quebec}} {{IPA|fr|[saiz]}}
 * {{audio|fr|Qc-seize.ogg|audio (Quebec)}}
+* {{rhymes|fr|ɛz}}
 
 ===Numeral===
 {{head|fr|numeral}}
