--- a/en/a/aphanitic.776754.wikitext
+++ b/en/a/aphanitic.776754.wikitext
@@ -16,6 +16,7 @@
 {{trans-top|having crystals too fine to be seen by the naked eye}}
 * Portuguese: {{t|pt|afanítico}}
 {{trans-mid}}
+* Spanish: {{t|es|afanítico|m}}
 {{trans-bottom}}
 
 ====See also====
