--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -8,8 +8,8 @@
 From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, compare {{cog|fr|avertissement||warning}}. See [[advertise]]. Equivalent to {{suffix|en|advertise|ment}}.
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|en|/ədˈvɜːtɪsmənt/}}, occasionally {{IPAchar|/ˈædvətaɪzmənt/|lang=en}}
-* {{a|US}} {{IPA|en|/ˈædvɚˌtaɪzmənt/}}, less often {{IPAchar|/ədˈvɝtɪzmənt/|lang=en}}
+* {{a|RP}} {{IPA|en|/ədˈvɜːtɪsmənt/}}, occasionally {{IPAchar|en|/ˈædvətaɪzmənt/}}
+* {{a|GA}} {{IPA|en|/ədˈvɝtɪzmənt/}}, less often {{IPAchar|en|/ˈædvɚˌtaɪzmənt/}}
 * {{audio|en|en-us-advertisement.ogg|Audio (US)}}
 * {{a|NZ}} {{IPA|en|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/}}
 * {{a|Singapore}} {{IPA|en|/ˌædvəˈtɪzmənt/}}
