--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -345,8 +345,11 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex}}.
 * {{audio|fr|Fr-simple.ogg|audio}}
 
 ===Adjective===
+{{number box|fr|1}}
 {{fr-adj}}
 
+# [[single]] (multiplier)
+#: {{usex|fr|comptabilité en partie '''simple'''|'''single'''-entry bookkeping}}
 # {{l|en|simple}}
 #: {{ux|fr|Un homme simple|A simple man}}
 # {{l|en|one-way}}
@@ -355,7 +358,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex}}.
 #: {{ux|fr|Un simple soldat|A mere soldier}}
 
 ====Usage notes====
-The first and second meanings are taken when the adjective is placed after the noun. The third meaning is taken when it is located before the noun.
+The second and third meanings are taken when the adjective is placed after the noun. The third meaning is taken when it is located before the noun.
 
 ====Descendants====
 * {{desc|bor=1|ro|simplu}}
