--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -358,7 +358,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex}}.
 #: {{ux|fr|Un simple soldat|A mere soldier}}
 
 ====Usage notes====
-The second and third meanings are taken when the adjective is placed after the noun. The third meaning is taken when it is located before the noun.
+The second and third meanings are taken when the adjective is placed after the noun. The fourth meaning is taken when it is located before the noun.
 
 ====Descendants====
 * {{desc|bor=1|ro|simplu}}
