--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -349,7 +349,8 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex}}.
 {{fr-adj}}
 
 # [[single]] (multiplier)
-#: {{usex|fr|comptabilité en partie '''simple''' et double|'''single'''-entry and double-entry bookkeping}}
+#: {{usex|fr|comptabilité en partie '''simple''' et double|single-entry and double-entry bookkeping}}
+#: {{usex|fr|passer du '''simple''' au double, du '''simple''' au triple...|to double, triple...}}
 # {{l|en|simple}}
 #: {{ux|fr|Un homme simple|A simple man}}
 # {{l|en|one-way}}
