--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -141,6 +141,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Hebrew: {{t+|he|טַחֲנָה|f|tr=takhánah}}
 * Hindi: {{t+|hi|चक्की|f}}
 * Hungarian: {{t+|hu|daráló}}, {{t|hu|őrlő}}, {{t|hu|passzírozó}}
+* Hunsrik: {{t|hrx|Mihl|f}}
 * Ido: {{t+|io|muelilo}}
 * Indonesian: {{t+|id|kincir}}
 * Irish: {{t|ga|muileann|m}}
@@ -154,8 +155,8 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Kurdish:
 *: Kurmanji: {{t+|ku|aş|m}}
 *: Sorani: {{t+|ku|ئاش}}
-* Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
 * Lak: {{t|lbe|гьарахъалу}}
 * Lakota: {{t|lkt|onákpaŋ}}
 * Latin: {{t|la|mola}}
