--- a/en/g/graniteware.856309.wikitext
+++ b/en/g/graniteware.856309.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{suffix|en|granite|ware}}
+From {{af|en|granite|-ware|id2=substance, kind, or use}}.
 
 ===Noun===
 {{en-noun|~}}
