/* Derived terms */ addition <staff#58076872>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -66,6 +66,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 |staff sergeant
 |staff sling
 |vine staff
+|whipstaff
 }}
 
 =====Translations=====
