/* Translations */  greek <consume#58079165>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -131,8 +131,9 @@ From {{bor|en|fro|consumer}}, from {{der|en|la|consumo|cōnsūmēre}}.
 * Dutch: {{t+|nl|verteren}}, {{t+|nl|consumeren}}
 * Finnish: {{t+|fi|tuhota}}, {{t+|fi|tuhoutua}}
 * French: {{t+|fr|consumer}}
-* Hungarian: {{t+|hu|elpusztít}}, {{t+|hu|felemészt}}
+* Greek: {{t+|el|αφανίζω}}, {{t+|el|εξολοθρεύω}}, {{t+|el|εκμηδενίζω}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|elpusztít}}, {{t+|hu|felemészt}}
 * Italian: {{t+|it|consumare}}
 * Persian: {{t|fa|نابود شدن|sc=fa-Arab}}
 * Portuguese: {{t+|pt|consumir}}
