--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -2,11 +2,10 @@
 ==English==
 {{wikipedia}}
 
-===Abbreviation===
-{{rfc-header|en|Abbreviation}}
-{{head|en|abbreviation}}
+===Proper noun===
+{{head|en|proper noun}}
 
-# {{lb|en|US}} [[Alaska]], a state of the [[United States of America]].
+# {{lb|en|US}} {{abbr of|[[Alaska]]|dot=,}} a state of the [[United States of America]].
 
 ===Noun===
 {{en-noun}}
