--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -110,8 +110,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 #: {{ux|en|That doctor is nothing but a lousy '''quack'''!}}
 #* '''1662''', ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
 #*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
-#* '''1720''', William Derham, ''Physico-theology''
-#*: After ſome Months, the '''Quack''' gets privately to Town, [...]
+#* {{quote-book|en|year=1720|author=William Derham|title=Physico-theology|passage=After ſome Months, the '''Quack''' gets privately to Town, [...]}}
 #* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
 #*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
 #* '''1981''', ''[[w:S.O.B. (film)|S.O.B.]]'' (film):
