quote-book <weight#58092105>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -52,8 +52,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 # {{lb|en|slang|countable}} One [[pound]] (1 lb) of drugs, especially [[cannabis]].
 #* '''2002''', Nicholas Dorn, ‎Karim Murji, ‎Nigel South, ''Traffickers: Drug Markets and Law Enforcement'' (page 5)
 #*: [I was] doing a '''weight''' [1 lb. at that time] a week, sometimes more, sometimes less.
-#* '''2009''', Martina Cole, ''The Ladykiller''
-#*: The ones the CIB should be looking out for, to her mind, were the officers who raided a flat, found a couple of '''weights''' of cannabis and stashed half of it before they made the collar. The cannabis would make its way back on to the street {{...}}
+#* {{quote-book|en|year=2009|author=Martina Cole|title=The Ladykiller|passage=The ones the CIB should be looking out for, to her mind, were the officers who raided a flat, found a couple of '''weights''' of cannabis and stashed half of it before they made the collar. The cannabis would make its way back on to the street {{...}}}}
 
 ====Alternative forms====
 * {{l|en|wt.}} {{q|abbreviation}}
