quote-book <thing#58092155>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -27,8 +27,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 #: {{ux|en|Bacon pie? Is that a '''thing'''?}}
 #* '''2014''', Marianna Papastephanou, ‎Torill Strand, ‎Anne Pirrie, ''Philosophy as a Lived Experience''
 #*: Frequent statements of the kind “'Race' is not a '''thing'''”, “'races,' put simply, do not exist”, “'race' (as each essay subtly shows) simply does not exist” aim to discredit Todorov's claim that a relapse to an ontology of race is at place {{...}}
-#* '''2014''', Harper Lin, ''Croissant Murder''
-#*: Clémence would say that his style was normcore before normcore became a '''thing'''. She had to admit that she still found him attractive.
+#* {{quote-book|en|year=2014|author=Harper Lin|title=Croissant Murder|passage=Clémence would say that his style was normcore before normcore became a '''thing'''. She had to admit that she still found him attractive.}}
 #*'''2019''', {{w|Adam Gopnik}}, ''A Thousand Small Sanities'', Riverrun 2019, p. 88:
 #*:Conservative philosophy, in other words, is, as we say now, a '''thing''' and deserves a serious listen.
 # {{lb|en|legal}}
@@ -430,6 +429,7 @@ From {{inh|odt|gem-pro|*þingą}}.
 * {{R:ONW|2272|think}}
 
 ----
+
 ==Old High German==
 
 ===Alternative forms===
