--- a/en/v/vortical.855979.wikitext
+++ b/en/v/vortical.855979.wikitext
@@ -11,6 +11,7 @@ From (the stem of) {{etyl|la|en}} {{m|la|vortex}} {{suffix|en||al}}.
 {{en-adj}}
 
 # Of or pertaining to a [[vortex]]; containing [[vortices]]; moving in a vortex. {{defdate|from 17th c.}}
+#* {{quote-book|en|title=Philosophical Transactions|publisher=Royal Society of London|year=1686|page=1190|passage=The motions of this odd Liquor were not only various, but frequently '''Vortical'''; to be satisfyed of which I sometimes put short bits of straw, or Fragments of some such like stuff, upon the discovered part of the surface of the Liquor, by which they were carryed towards very distant, if not opposite, parts of the Vessel at the same time.}}
 #* '''1888''', Alexander Winchell, ''World-life: or, Comparative Geology'', part II:
 #*: He assumed, in brief, that infinite space is filled with infinite matter; that matter was originally in a chaotic, formless condition; that the cosmical bodies arose at first from '''vortical''' motions in the original mass.
 #* '''1968''', "Orpheus Now", ''Time'', 20 Dec 1968:
